manifests/ns-isolation/01-namespace-isolation-l2-persistent.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: green
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
