manifests/ns-isolation/03-namespace-isolation-another-ns-l2-persistent.yaml
 ---
apiVersion: v1
kind: Namespace
metadata:
  name: another-namespace
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
