manifests/ns-isolation/02-namespace-isolation-workloads.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod
  namespace: test12
spec:
  containers:
  - args:
    - pause
    image: registry.k8s.io/e2e-test-images/agnhost:2.45
    imagePullPolicy: IfNotPresent
    name: agnhost-container
  nodeName: ovn-worker
  restartPolicy: Always
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
