manifests/ns-isolation/06-new-webserver-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: new-webserver
  namespace: green
spec:
  containers:
  - args:
    - "netexec"
    - "--http-port"
    - "9001"
    image: registry.k8s.io/e2e-test-images/agnhost:2.45
    imagePullPolicy: IfNotPresent
    name: agnhost-container
  nodeName: ovn-worker
  restartPolicy: Always
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
